--- a/calen/templates/calen/base2.html
+++ b/calen/templates/calen/base2.html
@@ -9,7 +9,33 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'calen/base.css' %}"/>
     <script src="{% static 'calen/base.js'%}"></script> 
-    <title>Event List</title>
+    <title>Events</title>
+    <style>
+    .button1 {
+      display: block;
+      width: 115px;
+      height: 25px;
+      background: #4E9CAF;
+      padding: 10px;
+      text-align: center;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      line-height: 25px;
+  }
+  .button2 {
+      display: block;
+      width: 115px;
+      height: 25px;
+      background: #af694e;
+      padding: 10px;
+      text-align: center;
+      border-radius: 5px;
+      color: white;
+      font-weight: bold;
+      line-height: 25px;
+  }
+    </style>
 </head>                              
 <body>
    
@@ -28,6 +54,7 @@
                 <th>Start time</th>
                 <th>End time</th>
                 <th>Event Link</th>
+                <th>Edit Events</th>
               </tr>
             </thead>
           </table>
