--- a/calen/templates/calen/del_event.html
+++ b/calen/templates/calen/del_event.html
@@ -1,5 +1,17 @@
-<form action="{% url 'delete-event'  %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Delete">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delete</title>
+</head>
+<body>
+    <p>Are you sure you want to delete this event?</a>
+        <form action="{% url 'delete-event' value %}" method ="POST">
+             {% csrf_token %}
+            <a href="{% url 'event-list'%}">Cancel</a>
+            <input type="submit" name="Confirm">
+        </form>            
+</body>
+</html>
