Modified the events table

--- a/calen/templates/calen/base2.html
+++ b/calen/templates/calen/base2.html
@@ -54,7 +54,7 @@
                 <th>Start time</th>
                 <th>End time</th>
                 <th>Event Link</th>
-                <th>Edit Events</th>
+                <th>Actions</th>
               </tr>
             </thead>
           </table>
