--- a/calen/templates/calen/base2.html
+++ b/calen/templates/calen/base2.html
@@ -73,4 +73,13 @@
       <!-- follow me template -->
      
 </body>
+<script>
+  //  var elems = document.getElementsByClassName('button2');
+  //  var confirmIt = function (e) {
+    //  if (!confirm('Are You sure to delete the event?')) e.preventDefault();
+  //  };
+  //  for (var i=0, l=elems.length; i < l ; i++){
+  //  elems[i].addEventListener('click', confirmIt, false);
+  //  }
+</script>
 </html>
